fix: Fix Discovery Eureka response if the service is not registred to allow reconnect by Enabler (#3795)
---------

Signed-off-by: Pavel Jareš <Pavel.Jares@broadcom.com>
Signed-off-by: Pablo Hernán Carle <pablo.carle@broadcom.com>
Co-authored-by: Pablo Carle <pablocarle@users.noreply.github.com>
Co-authored-by: Pablo Hernán Carle <pablo.carle@broadcom.com>